flow_collection endpoints and fix for using MERGE in opencypher for creation
