# api/constants.py
@@ -10,7 +10,7 @@ DEFAULT_PUT_LIMIT = 100
 SERIALISE_PREFIX = "SERIALISE_"
 RETURN_LITERAL = {
     "source": "source {.*, tags: t {.*}, source_collection: collect(DISTINCT c {.*, id: sc.id}), collected_by: collect(DISTINCT cb.id)}",
-    "flow": "flow {.*, source_id: s.id, essence_parameters: e {.*}, tags: t {.*}, flow_collection: collect(c {.*, id: fc.id}), collected_by: collect(cb.id)}",
+    "flow": "flow {.*, source_id: s.id, essence_parameters: e {.*}, tags: t {.*}, flow_collection: collect(DISTINCT c {.*, id: fc.id}), collected_by: collect(DISTINCT cb.id)}",
     "delete_request": "delete_request {.*, error: CASE WHEN e.type IS NULL THEN NULL ELSE e {.*} END}",
 }
 SOURCE_ID_PATTERN = Source.model_fields["id"].metadata[0].pattern
